Fix spacing in secondary content bar

--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -143,25 +143,24 @@ p, li {
 
 /* Secondary content */
 .secondary-content {
+    color: #fff;
     background-color: rgb(var(--theme-color));
     padding: 1.5rem 1rem;
     box-sizing: border-box;
 }
 
-.secondary-content {
-    color: #fff;
-}
-
 /* Contact */
 .component.contact {
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     padding-top: 0.2rem;
 }
+
+
 .contact .contact-info {
     font-size: 0.9rem;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 0.7rem;
 }
 
 .contact .contact-detail {
@@ -176,6 +175,9 @@ p, li {
 }
 .education .education-info {
     font-size: 0.9rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
 }
 .education .education-degree, .education .education-school {
     font-weight: 500;
